SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Baggage__c/fields/Baggage_Count__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Count__c</fullName>
    <label>Baggage Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>