SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Baggage__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Baggage Records</relationshipLabel>
    <relationshipName>Baggage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>