SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Baggage__c/fields/Extra_Charge__c.field-meta.xml
<CustomField>
    <fullName>Extra_Charge__c</fullName>
    <formula>IF(
  Baggage_Weight__c &lt;= 15, 0,
  IF(
    Baggage_Weight__c &lt;= 25, 1500,
    IF(
      Baggage_Weight__c &lt;= 35, 2500,
      IF(
        Baggage_Weight__c &lt;= 40, 3500,
        IF(
          Baggage_Weight__c &lt;= 50, 4500,
          0
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>