SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Baggage__c/fields/Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number__c</fullName>
    <displayFormat>TNBG-{000}</displayFormat>
    <label>Tag Number</label>
    <type>AutoNumber</type>
</CustomField>